# MLOps_lab11

./: .env.dev  .gitignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml
.github/workflows/: ci_cd_workflow.yaml
sentiment_app/: app.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
tests/: test_app.py
