[project]
name = "lab11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
deployment = [
    "boto3>=1.42.14",
    "joblib>=1.5.3",
    "numpy>=2.4.0",
    "pydantic-settings>=2.12.0",
    "skl2onnx>=1.19.1",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
inference = [
    "fastapi>=0.127.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "onnxruntime>=1.23.2",
    "tokenizers>=0.22.1",
    "numpy>=2.4.0",
    "mangum>=0.19.0",
    "awslambdaric>=3.1.1",
]

integration = [
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "numpy>=2.4.0",
    "onnxruntime>=1.23.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "skl2onnx>=1.19.1",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
